--- a/src/app/features/components/crypto-history/crypto-history.component.scss
+++ b/src/app/features/components/crypto-history/crypto-history.component.scss
@@ -16,7 +16,7 @@
       font-weight: bolder;
       transition: color 0.3s;
       padding: 8px 16px;
-      background-color: #014cec;
+      background-color: var(--primary-c);
       border-radius: 2px;
       border-style: none;
       cursor: pointer;
