--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Raleway:wght@100;400;700;800;900&display=swap");
 
-$primary-c: #0054fe;
-$green-c: #088450;
-$red-c: #840808;
+
+:root{
+  --primary-c:#0054fe;
+  --green-c:#088450;
+  --red-c: #840808;
+}
 
 * {
   padding: 0;
