--- a/src/app/auth/components/register-form/register-form.component.scss
+++ b/src/app/auth/components/register-form/register-form.component.scss
@@ -1,3 +1,4 @@
+
 body {
   display: flex;
   justify-content: center;
@@ -5,7 +6,6 @@ body {
   height: 100vh;
   margin: 0;
   .register {
-    background-color: #fff;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -14,7 +14,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     i {
       font-size: 48px;
-      color: #014cec;
+      color: var(--primary-c);
     }
   
     h1 {
@@ -33,10 +33,6 @@ body {
         border: 1px solid #ccc;
         border-radius: 4px;
         font-size: 16px;
-  
-        &::placeholder {
-          color: #ccc;
-        }
       }
   
       div {
@@ -47,7 +43,7 @@ body {
     }
   
     .submit {
-      background-color: #014cec;
+      background-color: var(--primary-c);
       color: #fff;
       border: none;
       border-radius: 4px;
@@ -67,7 +63,7 @@ body {
       border: none;
       font-size: 16px;
       margin-top: 10px;
-      color: #014cec;
+      color: var(--primary-c);
       cursor: pointer;
     }
   }
