--- a/src/app/features/components/dashboard/dashboard.component.scss
+++ b/src/app/features/components/dashboard/dashboard.component.scss
@@ -1,5 +1,3 @@
-$text-color: #014cec;
-
 div {
   .dashboard {
     padding: 20px;
@@ -10,17 +8,17 @@ div {
   }
 
   h1 {
-    color: $text-color;
+    color: var(--primary-c);
     font-size: 35px;
     font-weight: bold;
     i {
-      color: #014cec;
+      color: var(--primary-c);
     }
   }
 
   input[type="text"] {
-    color: $text-color;
-    border: 1px solid $text-color;
+    color: var(--primary-c);
+    border: 1px solid var(--primary-c);
     padding: 5px;
     border-radius: 5px;
     width: 100%;
@@ -36,11 +34,11 @@ div {
     td {
       padding: 12px;
       text-align: left;
-      border-bottom: 1px solid $text-color;
+      border-bottom: 1px solid var(--primary-c);
     }
 
     th {
-      color: $text-color;
+      color: var(--primary-c);
       font-size: 20px;
       font-weight: bolder;
     }
@@ -59,7 +57,7 @@ div {
     margin-top: 20px;
 
     button {
-      background-color: $text-color;
+      background-color: var(--primary-c);
       color: white;
       border: none;
       padding: 10px 20px;
@@ -68,13 +66,12 @@ div {
     }
 
     span {
-      color: $text-color;
+      color: var(--primary-c);
       font-size: 20px;
       font-weight: bold;
     }
 
     button:disabled {
-      background-color: lighten($text-color, 30%);
       cursor: not-allowed;
     }
 
@@ -84,15 +81,26 @@ div {
   }
 
   a {
-    color: $text-color;
+    color: var(--primary-c);
     text-decoration: none;
 
     i {
       font-size: 20px;
     }
-
-    &:hover {
-      color: lighten($text-color, 20%);
-    }
   }
 }
+
+@media screen and (max-width: 1180px) {
+  .head{
+    display: none;
+  }
+  .body{
+    display: none;
+  }
+}
+@media screen and (max-width: 530px) {
+ .change{
+  display: none;
+ }
+}
+
