--- a/src/app/features/components/history/history.component.scss
+++ b/src/app/features/components/history/history.component.scss
@@ -1,20 +1,25 @@
-body {
-  display: flex;
-  justify-content: center;
-  margin: 0;
+.container {
+  width: 100%;
   div {
-    background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
     h1 {
       font-size: 36px;
       color: #333;
       margin-bottom: 20px;
       font-weight: bold;
+    }
+    i {
+      font-size: 36px;
+      color: #333;
+      margin-bottom: 20px;
     }
 
     table {
@@ -41,6 +46,20 @@ body {
       tr:hover {
         background-color: #f5f5f5;
       }
+    }
+  }
+}
+@media screen and (max-width: 768px) {
+  .header {
+    display: none;
+  }
+
+  .body {
+    display: none;
+  }
+  .container {
+    div {
+      padding: 0;
     }
   }
 }
