--- a/src/app/features/components/user-profile/user-profile.component.html
+++ b/src/app/features/components/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="container">
   <div *ngIf="user">
     <i class="fa-regular fa-user"></i>
     <h1>User Profile</h1>
@@ -25,4 +25,4 @@
       </tr>
     </table>
   </div>
-</body>
+</div>
