--- a/src/app/features/components/user-profile/user-profile.component.scss
+++ b/src/app/features/components/user-profile/user-profile.component.scss
@@ -1,17 +1,14 @@
-body {
-  margin: 0;
-  padding: 0;
+.container {
+  width: 100%;
   div {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 20px auto;
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
+    margin-top: 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 50%;
     box-shadow: rgba(25, 0, 249, 0.25) 0px 54px 55px,
       rgba(25, 0, 255, 0.12) 0px -12px 30px, rgba(34, 0, 255, 0.12) 0px 4px 6px,
       rgba(17, 0, 255, 0.17) 0px 12px 13px,rgba(51, 0, 255, 0.199) 0px -3px 5px;
@@ -24,7 +21,7 @@ body {
 
   .fa-regular.fa-user {
     font-size: 60px;
-    color: #014cec;
+    color: var(--primary-c);
   }
 
   table {
@@ -45,7 +42,7 @@ body {
         padding-left: 10px;
       }
       .crypto{
-        color: #014cec;
+        color: var(--primary-c);
       }
     }
   }
@@ -57,7 +54,7 @@ body {
 
   .crypto-value {
     font-weight: bold;
-    color: #014cec;
+    color: var(--primary-c);
     font-size: 18px;
   }
 }
