--- a/src/app/features/components/wallet/wallet.component.scss
+++ b/src/app/features/components/wallet/wallet.component.scss
@@ -1,23 +1,23 @@
-body {
+div {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   .dashboard {
     margin: 0 auto;
     border-radius: 8px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 800px;
     margin-top: 20px; 
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
   i{
     font-size: 40px;
-    color: #c70000;
+    color: var(--red-c);
     margin: 0 auto;
     text-align: center;
+    margin-bottom: 10px;
   }
   h1 {
-    font-size: 24px;
+    font-size: 35px;
     margin: 0;
     text-align: center;
     font-weight: bold;
@@ -30,12 +30,14 @@ body {
   }
   
   th, td {
-    border: 1px solid #e5e5e5;
     padding: 10px;
     text-align: left;
     font-size: 16px;
     font-weight: bold;
+    border-bottom: 2px solid var(--red-c);
+
   }
+ 
   
   th {
     font-weight: bold;
@@ -46,7 +48,7 @@ body {
   }
   
   button {
-    background-color: #c70000;
+    background-color: var(--red-c);
     color: #ffffff;
     border: none;
     padding: 8px 16px;
