--- a/src/app/modals/credit-card/credit-card.component.scss
+++ b/src/app/modals/credit-card/credit-card.component.scss
@@ -23,7 +23,7 @@ form {
     }
   
     input[type="text"]:focus {
-      border-color: #007bff;
+      border-color: var(--primary-c)
     }
   
     .text-danger {
@@ -35,7 +35,7 @@ form {
       display: block;
       width: 100%;
       padding: 10px;
-      background-color: #007bff;
+      background-color: var(--primary-c);
       color: #fff;
       border: none;
       border-radius: 5px;
@@ -49,7 +49,7 @@ form {
       }
   
       &:hover {
-        background-color: #0056b3;
+        background-color: var(--primary-c);
       }
     }
   }
