--- a/src/app/modals/sell-crypto/sell-crypto.component.scss
+++ b/src/app/modals/sell-crypto/sell-crypto.component.scss
@@ -27,7 +27,7 @@ form {
   
     button {
       padding: 10px 20px;
-      background-color: #007bff;
+      background-color: var(--primary-c);
       color: #fff;
       border: none;
       border-radius: 3px;
@@ -36,7 +36,7 @@ form {
       font-weight: bold;
   
       &:hover {
-        background-color: #0056b3;
+        background-color: var(--primary-c);
       }
     }
   }
@@ -45,6 +45,3 @@ form {
     margin-top: 10px;
   }
   
-  input[name="usdAmount"].invalid {
-    border-color: #FF5733;
-  }
