--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -13,7 +13,7 @@ nav {
   }
   a {
     text-decoration: none;
-    box-shadow: inset 0 0 0 0 #014cec;
+    box-shadow: inset 0 0 0 0 var(--primary-c);
     color: #000000;
     margin: 0 -0.25rem;
     padding: 0 0.25rem;
@@ -22,7 +22,7 @@ nav {
   }
 
   ul .middle a:hover {
-    box-shadow: inset 100px 0 0 0 #014cec;
+    box-shadow: inset 100px 0 0 0 var(--primary-c);
     color: white;
     border-radius: 4px;
   }
@@ -51,7 +51,7 @@ nav {
     margin: 0 10px;
     transition: color 0.3s;
     padding: 8px 16px;
-    background-color: #014cec;
+    background-color: var(--primary-c);
     border-radius: 20px;
     border-style: none;
     cursor: pointer;
