--- a/src/app/features/components/buy-sell/buy-sell.component.scss
+++ b/src/app/features/components/buy-sell/buy-sell.component.scss
@@ -9,7 +9,8 @@ div {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-top: 30px;
-     th, td {
+    th,
+    td {
       border-bottom: 2px solid var(--green-c);
     }
     .crypto-table {
@@ -17,23 +18,29 @@ div {
       background-color: #fff;
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      
     }
+    .search-bar {
+      width: 30%;
+      margin: 0 auto;
+      height: 30px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      border: 2px var(--green-c) solid;
+    }
+
     h1 {
       font-size: 35px;
       font-weight: bolder;
       padding-bottom: 15px;
       margin: 0 auto;
-      margin-bottom: 30px;
+      margin-bottom: 15px;
     }
-    i{
+    i {
       margin: 0 auto;
       font-size: 35px;
       margin-bottom: 10px;
       color: var(--green-c);
-
     }
- 
 
     .crypto-table th {
       text-align: left;
@@ -41,7 +48,6 @@ div {
       font-weight: bolder;
       margin-top: 20px;
       padding-bottom: 15px;
-
     }
 
     .crypto-table td {
@@ -70,10 +76,10 @@ div {
 }
 
 @media screen and (max-width: 768px) {
-  .change  {
+  .change {
     display: none;
   }
-  .change-th{
+  .change-th {
     display: none;
   }
   h1 {
