--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,14 +2,13 @@ nav {
   width: 100%;
   background-color: #ffffff;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-  rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  .container{
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  .container {
     color: #000000;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    
   }
   a {
     text-decoration: none;
@@ -36,7 +35,6 @@ nav {
 
   li div a {
     margin: 18px;
-
   }
 
   .right.right-button-container {
@@ -56,9 +54,14 @@ nav {
     border-style: none;
     cursor: pointer;
   }
+  .accaunt {
+    background-color: rgb(196, 196, 196);
+    padding: 8px 16px;
+    border-radius: 4px;
+  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 920px) {
   nav {
     .right-ul {
       display: flex;
