add sell all logic

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="login">
   <div class="login-form">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div>
@@ -16,4 +16,4 @@
       <button type="submit" [disabled]="!loginForm.valid">Login</button>
     </form>
   </div>
-</body>
+</div>
