--- a/src/app/features/components/crypto-history/crypto-history.component.html
+++ b/src/app/features/components/crypto-history/crypto-history.component.html
@@ -1,4 +1,4 @@
-<div class="crypto-history">
+<div class="crypto-history container">
   <h1>Crypto History for {{ cryptoId }}</h1>
   <div>
     <button (click)="changeInterval('d1')">1 Year</button>
