--- a/src/app/features/components/home/home.component.html
+++ b/src/app/features/components/home/home.component.html
@@ -5,7 +5,7 @@
                 <h1>Jump start your crypto portfolio</h1>
                 <p>This page is the easiest place to buy and sell cryptocurrency. Sign up and get started today. Stay on
                     top of the markets with the app</p>
-                <a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Get Started</a>
+                <a routerLink="/dashboard" routerLinkActive="active" ariaCurrentWhenActive="page">Get Started</a>
             </div>
         </div>
             <img src="../../../../assets/images/home.png" alt="">
