--- a/src/app/features/components/home/home.component.scss
+++ b/src/app/features/components/home/home.component.scss
@@ -4,7 +4,7 @@ div {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 85px;
+    padding-bottom: 65px;
 
     img {
       max-width: 45%;
@@ -46,8 +46,8 @@ div {
     justify-content: center;
     align-items: center;
     h1 {
-      color: var(--primary-c);
-      font-size: 30px;
+color: #343434;
+      font-size: 24px;
       font-weight: bolder;
     }
   }
