--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="register-cont">
   <form class="register" [formGroup]="signUpForm">
     <i class="fa-solid fa-address-card"></i>
     <h1>Registration</h1>
@@ -71,4 +71,4 @@
     />
     <button (click)="resetForm()" class="reset">Reset</button>
   </form>
-</body>
+</div>
