--- a/src/app/features/components/dashboard/dashboard.component.html
+++ b/src/app/features/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div >
+<div class="container">
   <div class="dashboard">
     <h1>Crypto Dashboard <i class="fa-brands fa-bitcoin"></i></h1>
     <input type="text" [(ngModel)]="searchText" placeholder="Search Crypto" />
@@ -8,13 +8,13 @@
           <th class="head">Rank</th>
           <th>Name</th>
           <th class="head">Symbol</th>
-          <th>Price (USD)</th>
-          <th class="head">Market Cap (USD)</th>
-          <th class="head">VWAP (24Hr)</th>
+          <th>Price</th>
+          <th class="head">Market Cap</th>
+          <th class="head">VWAP(24Hr)</th>
           <th class="head">Supply</th>
           <th class="head">Volume(24Hr)</th>
           <th class="change">Change(24Hr)</th>
-          <th>Action</th>
+          <th style="text-align: right; padding-right: 8px;">Action</th>
         </tr>
       </thead>
       <tbody>
@@ -36,7 +36,7 @@
               <span *ngIf="crypto.changePercent24Hr === 0">|</span>
               {{ crypto.changePercent24Hr | numberFormat }} %
             </td>
-            <td>
+            <td style="text-align:right" align="right">
               <a [routerLink]="['/crypto', crypto.id, 'history']"><i class="fa-solid fa-chart-line"></i></a>
             </td>
           </ng-container>
