--- a/src/app/features/components/history/history.component.scss
+++ b/src/app/features/components/history/history.component.scss
@@ -29,12 +29,10 @@
       td {
         padding: 10px;
         border-bottom: 1px solid #ddd;
-        text-align: center;
-
+        text-align: left;
         font-size: 18px;
         i {
           font-size: 20px;
-          margin-right: 10px;
         }
       }
 
