--- a/src/app/features/components/wallet/wallet.component.html
+++ b/src/app/features/components/wallet/wallet.component.html
@@ -9,15 +9,19 @@
           <tr>
             <th>Name</th>
             <th>Amount</th>
-            <th style="text-align: right;">Action</th>
+            <th>Sell</th>
+            <th style="text-align: right;">Sell All</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let crypto of user.crypto">
             <td>{{ crypto.id }}</td>
             <td>{{ crypto.cryptoAmount | numberFormat }}</td>
-            <td style="text-align: right;">
+            <td >
               <button (click)="openSellModal(crypto)">Sell</button>
+            </td>
+            <td style="text-align: right;">
+                <button (click)="sellCrypto(crypto.id,crypto.cryptoAmount)">Sell All</button>
             </td>
           </tr>
         </tbody>
