--- a/src/app/features/components/wallet/wallet.component.scss
+++ b/src/app/features/components/wallet/wallet.component.scss
@@ -8,10 +8,13 @@ div {
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-top: 20px; 
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
   i{
     font-size: 40px;
-    color: var(--red-c);
+    color: var(--primary-c);
     margin: 0 auto;
     text-align: center;
     margin-bottom: 10px;
@@ -34,7 +37,7 @@ div {
     text-align: left;
     font-size: 16px;
     font-weight: bold;
-    border-bottom: 2px solid var(--red-c);
+    border-bottom: 1px solid var(--primary-c);
 
   }
  
