--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,4 @@
 <nav >
-  
   <div class="container">
     <div class="home">
       <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
@@ -44,7 +43,7 @@
       <ul class="right-ul">
         <li *ngIf="userIsLoggedIn()">
           <div class="accaunt" *ngIf="user">           
-            <i class="fa-regular fa-user"> {{ user.balance | numberFormat }} $</i>
+            <i class="fa-solid fa-dollar-sign"></i> {{ user.balance | numberFormat }} 
           </div>
         </li>
         <li *ngIf="!userIsLoggedIn()">
@@ -75,8 +74,8 @@
             </button>
           </div>
         </li>
-       
       </ul>
     </div>
   </div>
 </nav>
+<div class="nav-pad"></div>
