--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,11 +1,18 @@
 nav {
+  position: fixed;
   width: 100%;
+  height: fit-content;
+  min-height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #ffffff;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   .container {
     color: #000000;
     display: flex;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
@@ -61,7 +68,12 @@ nav {
   }
 }
 
+.nav-pad{
+  height: 70px;
+}
+
 @media screen and (max-width: 920px) {
+  .nav-pad{height: 150px;}
   nav {
     .right-ul {
       display: flex;
