--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,14 +20,22 @@ body {
 }
 body {
   margin: 0;
+  overflow-y: scroll;
+}
+body::-webkit-scrollbar {
+  width: 12px;
+}
+body::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+body::-webkit-scrollbar-thumb {
+  background: var(--primary-c);
 }
 
-.num-font {
-  font-family: monospace, sans-serif;
-}
+
 
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin-inline: auto;
   padding-inline: 40px;
 }
