add style changes

--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -5,70 +5,51 @@
     <label>
       E-mail
       <input type="email" formControlName="email" />
-      <div
-        *ngIf="
+      <div *ngIf="
           signUpForm.get('email')?.hasError('email') &&
           signUpForm.get('email')?.touched
-        "
-      >
+        ">
         Invalid email format.
       </div>
     </label>
     <label>
       Password:
-      <input
-        type="password"
-        formControlName="password"
-        placeholder="min 8 Character(ENG)"
-      />
-      <div
-        *ngIf="
+      <input type="password" formControlName="password" placeholder="min 8 Character(ENG)" />
+      <div *ngIf="
           signUpForm.get('password')?.hasError('minlength') &&
           signUpForm.get('password')?.touched
-        "
-      >
+        ">
         Password must be at least 8 characters long.
       </div>
-      <div
-        *ngIf="
+      <div *ngIf="
           signUpForm.get('password')?.hasError('englishValidator') &&
           signUpForm.get('password')?.touched
-        "
-      >
+        ">
         Password must contain only English letters and numbers.
       </div>
     </label>
     <label>
       Nickname:
       <input type="text" formControlName="nickname" />
-      <div
-        *ngIf="
+      <div *ngIf="
           signUpForm.get('nickname')?.hasError('englishValidator') &&
           signUpForm.get('nickname')?.touched
-        "
-      >
+        ">
         Nickname must contain only English letters and numbers.
       </div>
     </label>
     <label>
       Phone Number:
       <input type="text" formControlName="phoneNumber" placeholder="(+995)" />
-      <div
-        *ngIf="
+      <div *ngIf="
           signUpForm.get('phoneNumber')?.hasError('phoneNumberFormat') &&
           signUpForm.get('phoneNumber')?.touched
-        "
-      >
+        ">
         Invalid phone number format. It should start with '+995' followed by 9
         digits.
       </div>
     </label>
-    <input
-      type="submit"
-      [disabled]="!signUpForm.valid"
-      (click)="onSubmit()"
-      class="submit"
-    />
+    <input type="submit" [disabled]="!signUpForm.valid" (click)="onSubmit()" class="submit" />
     <button (click)="resetForm()" class="reset">Reset</button>
   </form>
 </div>
