--- a/src/app/auth/components/register-form/register-form.component.scss
+++ b/src/app/auth/components/register-form/register-form.component.scss
@@ -1,4 +1,3 @@
-
 .register-cont {
   display: flex;
   justify-content: center;
@@ -13,22 +12,24 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 320px;
     text-align: center;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     i {
       font-size: 48px;
       color: var(--primary-c);
     }
-  
+
     h1 {
       font-size: 24px;
       margin: 20px 0;
     }
-  
+
     label {
       display: block;
       text-align: left;
       margin: 10px 0;
-  
+
       input {
         width: 100%;
         padding: 10px;
@@ -36,14 +37,14 @@
         border-radius: 4px;
         font-size: 16px;
       }
-  
+
       div {
         color: #ff0000;
         font-size: 14px;
         margin-top: 4px;
       }
     }
-  
+
     .submit {
       background-color: var(--primary-c);
       color: #fff;
@@ -53,13 +54,13 @@
       font-size: 16px;
       margin-top: 20px;
       cursor: pointer;
-  
+
       &:disabled {
         background-color: #ccc;
         cursor: not-allowed;
       }
     }
-  
+
     .reset {
       background-color: transparent;
       border: none;
@@ -70,4 +71,3 @@
     }
   }
 }
-
