--- a/src/app/features/components/dashboard/dashboard.component.html
+++ b/src/app/features/components/dashboard/dashboard.component.html
@@ -14,14 +14,14 @@
           <th class="head">Supply</th>
           <th class="head">Volume(24Hr)</th>
           <th class="change">Change(24Hr)</th>
-          <th style="text-align: right; padding-right: 8px;">Action</th>
+          <th style="text-align: right; padding-right: 8px;">Charts</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let crypto of paginatedCryptoData">
           <ng-container *ngIf="crypto.name.toLowerCase().includes(searchText.toLowerCase())">
             <td class="body">{{ crypto.rank }}</td>
-            <td>{{ crypto.name }}</td>
+            <td><b>{{ crypto.name }}</b></td>
             <td class="body">{{ crypto.symbol }}</td>
             <td>$ {{ crypto.priceUsd | numberFormat }}</td>
             <td class="body">$ {{ crypto.marketCapUsd | numberFormat }}</td>
