--- a/src/app/features/components/dashboard/dashboard.component.scss
+++ b/src/app/features/components/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 div {
   .dashboard {
+    margin-top: 30px;
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
@@ -45,7 +46,6 @@ div {
     }
 
     td {
-      color: black;
       font-size: 16px;
     }
   }
