--- a/src/app/features/components/history/history.component.scss
+++ b/src/app/features/components/history/history.component.scss
@@ -5,7 +5,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -18,7 +18,7 @@
     }
     i {
       font-size: 36px;
-      color: #333;
+      color: var(--primary-c);
       margin-bottom: 20px;
     }
 
@@ -37,8 +37,10 @@
       }
 
       th {
-        background-color: #f0f0f0;
+        color: var(--primary-c);
+        font-size: 18px;
         font-weight: bolder;
+        white-space: nowrap;
       }
 
       tr:hover {
@@ -47,17 +49,28 @@
     }
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 880px) {
   .header {
     display: none;
   }
-
   .body {
     display: none;
   }
+
   .container {
+    width: 100%;
     div {
-      padding: 0;
+      table {
+        th,
+        td {
+          padding: 5px;
+          font-size: 12px;
+        }
+
+        th {
+          font-size: 12px;
+        }
+      }
     }
   }
 }
