--- a/src/app/features/components/home/home.component.scss
+++ b/src/app/features/components/home/home.component.scss
@@ -46,7 +46,7 @@ div {
     justify-content: center;
     align-items: center;
     h1 {
-color: #343434;
+      color: #343434;
       font-size: 24px;
       font-weight: bolder;
     }
@@ -65,5 +65,6 @@ color: #343434;
     font-weight: bold;
     border-radius: 10px;
     font-size: 20px;
+    box-shadow: none;
   }
 }
