--- a/src/app/features/components/wallet/wallet.component.scss
+++ b/src/app/features/components/wallet/wallet.component.scss
@@ -7,12 +7,12 @@ div {
     border-radius: 8px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin-top: 20px; 
+    margin-top: 30px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
-  i{
+  i {
     font-size: 40px;
     color: var(--primary-c);
     margin: 0 auto;
@@ -25,31 +25,35 @@ div {
     text-align: center;
     font-weight: bold;
   }
-  
+
   .crypto-table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
   }
-  
-  th, td {
+
+  th,
+  td {
     padding: 10px;
     text-align: left;
-    font-size: 16px;
-    font-weight: bold;
     border-bottom: 1px solid var(--primary-c);
+  }
 
-  }
- 
-  
   th {
-    font-weight: bold;
+    color: var(--primary-c);
+    font-size: 18px;
+    font-weight: bolder;
+    white-space: nowrap;
   }
-  
+
+  td {
+    font-size: 16px;
+  }
+
   tr:hover {
     background-color: #f5f5f5;
   }
-  
+
   button {
     background-color: var(--red-c);
     color: #ffffff;
@@ -60,3 +64,23 @@ div {
   }
 }
 
+@media screen and (max-width: 768px) {
+  div {
+    th,
+    td {
+      padding: 5px;
+    }
+
+    th {
+      font-size: 12px;
+    }
+
+    td {
+      font-size: 12px;
+    }
+
+    button {
+      padding: 4px 8px;
+    }
+  }
+}
