--- a/src/app/modals/sell-crypto/sell-crypto.component.html
+++ b/src/app/modals/sell-crypto/sell-crypto.component.html
@@ -4,13 +4,10 @@
   <p>Balance: ${{ userBalance | numberFormat }}</p>
   <label for="usd">Amount</label>
   <input [(ngModel)]="cryptoAmount" name="cryptoAmount" [ngModelOptions]="{ standalone: true }" type="number" min="0" />
-
   <p>Current Price: ${{livePrice | numberFormat}}</p>
   <p>Available: {{ crypto.cryptoAmount | numberFormat }}</p>
-  <label for="usdAmount"
-    >You will get: $
-    {{ (cryptoAmount | strToNum) * livePrice | numberFormat }}</label
-  >
+  <label for="usdAmount">You will get: $
+    {{ (cryptoAmount | strToNum) * livePrice | numberFormat }}</label>
   <br />
   <button type="submit">Sell</button>
 </form>
