--- a/src/app/features/components/home/home.component.scss
+++ b/src/app/features/components/home/home.component.scss
@@ -68,3 +68,11 @@ div {
     box-shadow: none;
   }
 }
+
+@media screen and (max-width: 420px) {
+  div .home .get-started div a {
+    padding: 5px 10px;
+    font-size: 12px;
+  }
+}
+
