add subject for balance

--- a/src/app/features/components/user-profile/user-profile.component.html
+++ b/src/app/features/components/user-profile/user-profile.component.html
@@ -5,12 +5,12 @@
     <table>
       <tr class="head">
         <td></td>
-        <td>Nickname:</td>
+        <td><b>Nickname:</b> </td>
         <td>{{ user.nickname }}</td>
       </tr>
       <tr class="head">
         <td></td>
-        <td>Balance:</td>
+        <td><b>Balance:</b></td>
         <td>{{ user.balance | numberFormat }} $</td>
       </tr>
       <tr class="head">
