--- a/src/app/modals/sell-crypto/sell-crypto.component.html
+++ b/src/app/modals/sell-crypto/sell-crypto.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="sellForm" (ngSubmit)="onSubmit()">
-  <button (click)="closeSellModal()">X</button>
-  <p>{{ crypto.id }}</p>
+  <!-- <button (click)="closeSellModal()">X</button> -->
+  <p><b>{{ crypto.id }}</b></p>
   <p>Balance: ${{ userBalance | numberFormat }}</p>
   <label for="usd">Amount</label>
   <input [(ngModel)]="cryptoAmount" name="cryptoAmount" [ngModelOptions]="{ standalone: true }" type="number" min="0" />
