--- a/src/app/modals/credit-card/credit-card.component.scss
+++ b/src/app/modals/credit-card/credit-card.component.scss
@@ -16,7 +16,7 @@ form {
   input[type="text"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--primary-c);
     border-radius: 5px;
     font-size: 16px;
     transition: border-color 0.3s;
