--- a/src/app/modals/credit-card/credit-card.component.scss
+++ b/src/app/modals/credit-card/credit-card.component.scss
@@ -2,7 +2,6 @@ form {
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -52,4 +51,14 @@ form {
       background-color: var(--primary-c);
     }
   }
+}
+.exit{
+  background-color: var(--red-c);
+  padding: 6px 10px;
+  float: right;
+  color: white;
+  border: none;
+  margin: 8px;
+  border-radius: 3px;
+  cursor: pointer;
 }
