--- a/src/app/modals/sell-crypto/sell-crypto.component.scss
+++ b/src/app/modals/sell-crypto/sell-crypto.component.scss
@@ -3,7 +3,6 @@ form {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f5f5f5;
   width: 300px;
@@ -16,7 +15,7 @@ form {
   input[type="number"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--primary-c);
     border-radius: 3px;
     margin-bottom: 10px;
   }
@@ -44,4 +43,15 @@ form {
 
 label[for="cryptoAmount"] {
   margin-top: 10px;
+}
+
+.exit{
+  background-color: var(--red-c);
+  padding: 6px 10px;
+  float: right;
+  color: white;
+  border: none;
+  margin: 4px;
+  border-radius: 3px;
+  cursor: pointer;
 }
